<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:padding="@dimen/padding_medium"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_marginBottom="@dimen/margin_large">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/greetingLine1TextView"
            style="@style/TextStyle.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_would_you" />

        <TextView
            android:id="@+id/greetingLine2TextView"
            style="@style/TextStyle.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like_to_drink_today" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/notificationIcon"
            style="@style/IconStyle"
            android:src="@drawable/ic_notifications"
            android:layout_marginEnd="@dimen/margin_small"
            android:contentDescription="@string/notifications"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground" />

        <ImageView
            android:id="@+id/menuIcon"
            style="@style/IconStyle"
            android:src="@drawable/ic_menu"
            android:contentDescription="@string/menu"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground" />

    </LinearLayout>

</LinearLayout>