<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/emptyStateContainer"
    style="@style/EmptyStateContainer">

    <ImageView
        android:id="@+id/emptyStateIcon"
        android:layout_width="@dimen/empty_state_icon_size"
        android:layout_height="@dimen/empty_state_icon_size"
        android:layout_marginBottom="@dimen/margin_large"
        android:contentDescription="@string/no_coffee_icon"
        android:src="@drawable/ic_coffee_empty"
        android:alpha="0.3"
        app:tint="@color/text_secondary" />

    <TextView
        android:id="@+id/emptyStateTitle"
        style="@style/TextStyle.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/no_coffee_found"
        android:gravity="center" />

    <TextView
        android:id="@+id/emptyStateMessage"
        style="@style/TextStyle.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/empty_general_message"
        android:textColor="@color/text_secondary"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/clearSearchButton"
        style="@style/CardStyle.Round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/text_secondary"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/clear_search" />

    </androidx.cardview.widget.CardView>

</LinearLayout>