<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_large"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/greetingLine2TextView"
            style="@style/TextStyle.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_morning" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/notificationIcon"
            style="@style/IconStyle"
            android:layout_marginEnd="@dimen/margin_small"
            android:clickable="true"
            android:contentDescription="@string/notifications"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_notifications" />

        <ImageView
            android:id="@+id/menuIcon"
            style="@style/IconStyle"
            android:clickable="true"
            android:contentDescription="@string/menu"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_menu" />

    </LinearLayout>

</LinearLayout>