<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/errorStateContainer"
    style="@style/EmptyStateContainer">

    <ImageView
        android:id="@+id/errorIcon"
        android:layout_width="@dimen/error_icon_size"
        android:layout_height="@dimen/error_icon_size"
        android:layout_marginBottom="@dimen/margin_medium"
        android:src="@drawable/ic_error"
        android:contentDescription="@string/error_icon"
        app:tint="@color/error_color" />

    <TextView
        android:id="@+id/errorTextView"
        style="@style/TextStyle.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:text="@string/failed_to_load_menu_please_try_again"
        android:textAlignment="center"
        android:textColor="@color/error_color"
        android:gravity="center" />

    <androidx.cardview.widget.CardView
        android:id="@+id/retryButton"
        style="@style/CardStyle.Round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/error_color"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            style="@style/ButtonStyle.Error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/retry"
            android:paddingStart="@dimen/padding_xlarge"
            android:paddingEnd="@dimen/padding_xlarge" />

    </androidx.cardview.widget.CardView>

</LinearLayout>